--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react": "^16.4.2",
     "react-agenda": "0.0.7",
     "react-dom": "^16.4.2",
-    "react-scripts": "1.1.4"
+    "react-scripts": "1.1.4",
+    "serve": "^9.4.2"
   },
   "scripts": {
     "start": "react-scripts start",
