added timezone Offset to caculate the right time local AU Brisbane vs Perth

--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
     "@fortawesome/react-fontawesome": "0.1.0-11",
     "classnames": "^2.2.6",
     "i": "^0.3.6",
+    "jstz": "^2.0.0",
     "moment": "^2.22.2",
     "moment-timezone": "^0.5.21",
     "npm": "^6.3.0",
     "react": "^16.4.2",
     "react-agenda": "0.0.7",
     "react-dom": "^16.4.2",
+    "react-moment": "^0.7.9",
     "react-scripts": "1.1.4",
     "serve": "^9.4.2"
   },
